# gnssir_rt

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  init_localproc.py  main.py  main_cl.py  pyproject.toml
.github/workflows/: default.yml
configs/: main.yaml
configs/site/: rv3s.yaml  sjdlr.yaml
gnssir_rt/: elv_interp.py  elv_interp_txt.py  helper.py  make_gpt.py  plot.py  processing.py  tropd.py
gnssr/: elv_interp_txt.py  helper.py  make_gpt.py  plot.py  processing.py  tropd.py
site_inputs/: rv3s.py  sjdlr.py
tests/: conftest.py  sjdlr_t1input.py  sjdlr_t2input.py  test_elv_interp.py  test_gnssir.py
tests/testdata/: snr_elv_interp_in.pkl  snr_elv_interp_out.pkl
tests/testdata/rv3s/snr/a/: 20_09_12_00.snr  20_09_12_01.snr  20_09_12_02.snr  20_09_12_03.snr  20_09_12_04.snr  20_09_12_05.snr  20_09_12_06.snr  20_09_12_07.snr  20_09_12_08.snr  20_09_12_09.snr  20_09_12_10.snr  20_09_12_11.snr  20_09_12_12.snr  20_09_12_13.snr  20_09_12_14.snr  20_09_12_15.snr  20_09_12_16.snr  20_09_12_17.snr  20_09_12_18.snr  20_09_12_19.snr  20_09_12_20.snr  20_09_12_21.snr  20_09_12_22.snr  20_09_12_23.snr
tests/testdata/rv3s/snr/b/: 20_09_12_00.snr  20_09_12_01.snr  20_09_12_02.snr  20_09_12_03.snr  20_09_12_04.snr  20_09_12_05.snr  20_09_12_06.snr  20_09_12_07.snr  20_09_12_08.snr  20_09_12_09.snr  20_09_12_10.snr  20_09_12_11.snr  20_09_12_12.snr  20_09_12_13.snr  20_09_12_14.snr  20_09_12_15.snr  20_09_12_16.snr  20_09_12_17.snr  20_09_12_18.snr  20_09_12_19.snr  20_09_12_20.snr  20_09_12_21.snr  (+2 more)
tests/testdata/sjdlr/: invout.pkl  tropd_input.txt
(+232 files in other folders)
